# chift-odoo-test-assignment

./: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  setup_ec2.sh
.github/workflows/: deploy.yml
migrations/: env.py
migrations/versions/: 04e62380580f_add_invoices_model.py  a570377ffbc1_add_is_company_flag.py  a902d2103e77_add_user_model.py  f5954da6a4b2_add_odoo_contact_table.py
nginx/: nginx.conf
nginx/templates/: app.conf.template
src/celery/: celery_app.py  tasks.py
src/core/: logger.py  redis_client.py  settings.py
src/core/auth/: dependencies.py
src/db/: annotations.py  base.py  mixins.py  session.py
src/models/: __init__.py
src/pagination/: pagination.py
src/repositories/: base.py  contacts.py  invoices.py  users.py
src/routers/: __init__.py  auth.py  contacts.py  invoices.py  odoo.py
src/rpc/: client.py
src/schemas/: user.py
src/schemas/api/: odoo.py
src/schemas/odoo/: schemas.py
src/services/: odoo.py
src/utils/: auth.py  exceptions.py
