[project]
name = "chift-odoo-test-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "celery>=5.6.2",
    "fastapi>=0.128.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.46",
    "tenacity>=9.1.2",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.53.0",
    "ruff>=0.14.14",
    "watchdog>=6.0.0",
]
